# qa_guru_homework_20

./: .env.local_emulator  .env.local_real  .gitignore  README.md  config.py  config3.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_wikipedia_android.py
utils/: __init__.py  file.py
